--- a/src/_data/quicklinks.yaml
+++ b/src/_data/quicklinks.yaml
@@ -1,14 +1,14 @@
 ---
 links:
-  - title: Netlify CMS
-    url: "https://www.netlifycms.org/"
-    desc: Open source content management for your Git workflow
-  - title: Eleventy
-    url: "https://www.11ty.dev/"
-    desc: Eleventy is a simpler static site generator.
-  - title: Alpine.js
-    url: "https://github.com/alpinejs/alpine"
-    desc: A minimal framework for composing JavaScript behavior in your markup.
-  - title: Tailwind CSS
-    url: "https://tailwindcss.com/"
-    desc: A utility-first CSS framework for rapidly building custom designs.
+  - title: 节点购买
+    url: "https://stashbox1.com"
+    desc: 随时随地 畅游全球
+  - title: 使用教程
+    url: "https://www.stashbox.top/index.php/%e4%bd%bf%e7%94%a8%e6%95%99%e7%a8%8b/"
+    desc: 我们的服务适用于macOS、iOS、Android、Windows
+  - title: 小火箭ID
+    url: "https://shop.stashbox.top/"
+    desc: 
+  - title: 台湾，日本等VPS
+    url: "https://qtumcloud.top"
+    desc: 
