--- a/src/_data/settings.yaml
+++ b/src/_data/settings.yaml
@@ -1,4 +1,4 @@
 ---
-name: Neat Starter
+name: Hurricanerelay
 author: Surjith S M
-url: "https://surjithctly.in/"
+url: "https://hurricanerelay.net/#/login"
