--- a/src/_data/quicklinks.yaml
+++ b/src/_data/quicklinks.yaml
@@ -1,14 +1,14 @@
 ---
 links:
   - title: 节点购买
-    url: "https://stashbox1.com"
-    desc: 随时随地 畅游全球
+    url: "https://hurricanerelay.net/#/login"
+    desc: 强大SLA保证，流媒体解锁
   - title: 使用教程
     url: "https://www.stashbox.top/index.php/%e4%bd%bf%e7%94%a8%e6%95%99%e7%a8%8b/"
     desc: 我们的服务适用于macOS、iOS、Android、Windows
-  - title: 小火箭ID
+  - title: 各类ID购买
     url: "https://shop.stashbox.top/"
-    desc: 
+    desc: 独享账号，密保改密
   - title: 台湾，日本等VPS
     url: "https://qtumcloud.top"
     desc: 
