--- a/src/_data/quicklinks.yaml
+++ b/src/_data/quicklinks.yaml
@@ -9,6 +9,6 @@ links:
   - title: 各类ID购买
     url: "https://shop.stashbox.top/"
     desc: 独享账号，密保改密
-  - title: 台湾，日本等VPS
-    url: "https://qtumcloud.top"
+  - title: 定制服务
+    url: "https://t.me/wotowoo"
     desc: 
