--- a/src/_data/quicklinks.yaml
+++ b/src/_data/quicklinks.yaml
@@ -1,7 +1,7 @@
 ---
 links:
   - title: 节点购买
-    url: "https://hurricanerelay.net/#/login"
+    url: "https://www.hurricanerelay.net"
     desc: 强大SLA保证，流媒体解锁
   - title: 使用教程
     url: "https://www.stashbox.top/index.php/%e4%bd%bf%e7%94%a8%e6%95%99%e7%a8%8b/"
