--- a/src/_data/quicklinks.yaml
+++ b/src/_data/quicklinks.yaml
@@ -7,7 +7,7 @@ links:
     url: "https://www.stashbox.top/index.php/%e4%bd%bf%e7%94%a8%e6%95%99%e7%a8%8b/"
     desc: 我们的服务适用于macOS、iOS、Android、Windows
   - title: 各类ID购买
-    url: "https://shop.stashbox.top/"
+    url: "https://aurorashop.club/"
     desc: 独享账号，密保改密
   - title: 定制服务
     url: "https://t.me/wotowoo"
