--- a/src/_data/quicklinks.yaml
+++ b/src/_data/quicklinks.yaml
@@ -4,7 +4,7 @@ links:
     url: "https://www.hurricanerelay.net"
     desc: 强大SLA保证，流媒体解锁
   - title: 使用教程
-    url: "https://www.stashbox.top/index.php/%e4%bd%bf%e7%94%a8%e6%95%99%e7%a8%8b/"
+    url: "hhttps://wiki.hurricanerelay.top/"
     desc: 我们的服务适用于macOS、iOS、Android、Windows
   - title: 各类ID购买
     url: "https://aurorashop.club/"
